--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
 />
+<script src="https://unpkg.com/wavesurfer.js"></script>
+<script src="./js/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
